#5 Upgrade to Java 25 and SpringBoot 4.1.0